# osfi-z

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSetCompiler.cmake  README.md  project.el
etc/icons/: generate.sh
hw/: CMakeLists.txt  linker_stm32f405.ld
hw/z1/: .cproject  .mxproject  .project  CMakeLists.txt  mx.scratch  z1.ioc  z1.xml
hw/z1/Drivers/CMSIS/Include/: cmsis_gcc.h
hw/z1/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
hw/z1/Inc/: FreeRTOSConfig.h  dma.h  gpio.h  i2c.h  i2s.h  main.h  sdio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h  usb_otg.h
hw/z1/Src/: dma.c  freertos.c  gpio.c  i2c.c  i2s.c  main.c  printf.c  sdio.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  usart.c  usb_otg.c
hw/z2/: .cproject  .mxproject  .project  CMakeIgnore.txt  CMakeLists.txt  STM32F405RGTx_FLASH.ld  wav.h  z2.ioc  z2.xml
hw/z2/Inc/: FreeRTOSConfig.h  dma.h  i2c.h  i2s.h  main.h  sdio.h  stm32f4xx_it.h
hw/z2/Src/: dma.c  gpio.c  (+9 more)
hw/zishan-z1-original/: zishan-z1-original.sch
mp3_stm32/: .cproject  .mxproject  .project  STM32F437VGTx_FLASH.ld  mp3_stm32.ioc  mp3_stm32.txt  mp3_stm32.xml  project.el
mp3_stm32/CubeMX2Makefile/: CubeMX2Makefile.py  CubeMX2Makefile.tpl  CubeMX2project.tpl  readme.md
mp3_stm32/Flac/: Ext_flac.c_unused  bitstreamf.h  flac.c_unused  flac_s.c  flac_s.h
mp3_stm32/Inc/: dma.h  ffconf.h  i2s.h  ili.h  mp3.h  mxconstants.h  sdio.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
mp3_stm32/Src/: bsp_driver_sd.c  dma.c  gpio.c  i2s.c  ili.c  main.c  mp3.c  printf.c  sdio.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c  wav.c  wav.h
osfi-z/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F405RGTx_FLASH.ld  linker_main.ld  osfi-z.ioc  osfi-z.xml
osfi-z/Controls/: CMakeLists.txt  controls.h  controls_gpio.c  controls_gpio.h
osfi-z/Inc/: i2c.h  i2s.h  main.h  sdio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h  usb_otg.h
osfi-z/Src/: dma.c  freertos.c  gpio.c  i2c.c  i2s.c  main.c  sdio.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  usart.c  usb_otg.c  wav.c
osfi-z/codec/: CMakeLists.txt  SOURCES  buflib.h  config.h  file.h  load_code.c  platform.h  printf.c  rbcodecconfig.h  rbcodecplatform.h  sdlapp.h  stdio_fatfs.c  warble.c  warble.h
osfi-z/fatfs/: CMakeLists.txt  SOURCES  ff_gen_drv.h  ffconf.h  ffsystem.c
osfi-z/gui/: CMakeLists.txt  SOURCES  fm.c  fm.h  gui.c  gui.h  gui_bitmaps.c  gui_bitmaps.h  gui_controls.c  gui_controls.h  gui_filelist.c  gui_filelist.h  gui_helpers.c  gui_helpers.h  gui_styles.c  gui_styles.h  makise_config.h
osfi-z/gui/MakiseGUI/MakiseGUI/: makise.c  makise_primitives.c  makise_text.c  makise_text.h
osfi-z/gui/MakiseGUI/MakiseGUI/gui/: makise_gui.c  makise_gui_input.c  makise_gui_input.h
osfi-z/gui/MakiseGUI/MakiseGUI/gui/elements/: makise_e.h  makise_e_lable.c  makise_e_slider.c
osfi-z/gui/driver/: makise_ssd1306.c  makise_ssd1306.h
osfi-z/gui/windows/: fm.c  fm.h  system_menu.c  system_menu.h  system_windows.c  system_windows.h  window_metadata.c  window_metadata.h  window_play.c  window_play.h
osfi-z/lib/: CMakeLists.txt  GPATH  GRTAGS  GTAGS
osfi-z/lib/codecs/: CMakeLists.txt  SOURCES  aiff.c  codecs.h  codecs.make  flac.c  mpa.c  wav.c  wmavoice.c
osfi-z/lib/codecs/lib/: fft-ffmpeg.c
osfi-z/lib/codecs/liba52/: CMakeLists.txt
osfi-z/lib/codecs/libasf/: CMakeLists.txt
osfi-z/lib/codecs/libffmpegFLAC/: arm.S  decoder.c
osfi-z/lib/codecs/libm4a/: CMakeLists.txt
osfi-z/lib/codecs/libmad/: fixed.h  frame.h  imdct_l_arm.S  mad_iram.h  synth_full_arm.S
osfi-z/lib/codecs/libmusepack/: SOURCES
osfi-z/lib/codecs/libopus/ogg/: os_types.h
osfi-z/lib/codecs/libpcm/: CMakeLists.txt
osfi-z/lib/codecs/librm/: CMakeLists.txt
osfi-z/lib/codecs/libtremor/: CMakeLists.txt
osfi-z/lib/codecs/libwavpack/: arm.S  arml.S
osfi-z/lib/dsp/: SOURCES  channel_mode.c  dsp_arm.S  dsp_proc_entry.h  dsp_proc_settings.h  dsp_sample_output.c  pbe.c  surround.c
osfi-z/lib/fixedpoint/: CMakeLists.txt
osfi-z/lib/libsetjmp/: CMakeLists.txt  SOURCES
osfi-z/lib/metadata/: CMakeLists.txt  asf.c  flac.c  hes.c  id3tags.c  metadata.c  metadata.h  mp3.c
osfi-z/lib/rbcodec/: CMakeLists.txt  SOURCES  SOURCES_arm  rbcodec.make
osfi-z/lib/rbcodec/codecs/: CMakeLists.txt  SOURCES_lib  aiff.c  codec_crt0.c  codecs.h  codecs.lds  flac.c  mpa.c  wav.c
osfi-z/lib/rbcodec/codecs/lib/: codeclib.c  codeclib.h  ffmpeg_get_bits.h  mdct_lookup.c
osfi-z/lib/rbcodec/codecs/libalac/: CMakeLists.txt
osfi-z/lib/rbcodec/codecs/libfaad/: CMakeLists.txt
osfi-z/lib/rbcodec/codecs/libffmpegFLAC/: CMakeLists.txt  SOURCES  SOURCES_arm  arm.S  bitstream.h  decoder.c  decoder.h  shndec.c
osfi-z/lib/rbcodec/codecs/libmad/: CMakeLists.txt  SOURCES  SOURCES_arm  layer3.c  mad_iram.h  stream.h  synth.c
osfi-z/lib/rbcodec/codecs/libmusepack/: CMakeLists.txt
osfi-z/lib/rbcodec/codecs/libpcm/: CMakeLists.txt  linear_pcm.c
osfi-z/lib/rbcodec/codecs/libspc/: CMakeLists.txt
osfi-z/lib/rbcodec/codecs/libwavpack/: CMakeLists.txt  SOURCES
osfi-z/lib/rbcodec/codecs/libwma/: CMakeLists.txt
osfi-z/lib/rbcodec/dsp/: afr.c  crossfeed.c  dsp_filter.c  dsp_misc.h  pga.c  resample.c  tdspeed.c
osfi-z/lib/rbcodec/libc/: ctype.c
osfi-z/lib/rbcodec/metadata/: CMakeLists.txt  SOURCES  metadata.c  wave.c
osfi-z/lib/rockbox_sys/: CMakeLists.txt  README  SOURCES  audiohw.h  buflib.h  config.h  config_caps.h  core_alloc.c  core_alloc.h  debug.h  dsp_core.h  dsp_proc_entry.h  endian.h  gcc_extensions.h  load_code.h  misc.h  pathfuncs.c  platform.h  rbcodecconfig.h  rbcodecplatform.h  rbendian.h  rbpaths.h  string-extra.h  structec.c  system-arm.h  system.h  unicode.c
osfi-z/lib/tlsf/: CMakeLists.txt
osfi-z/player/: CMakeLists.txt  SOURCES  warble.c  warble.h  warble_hw.c  warble_hw.h  warble_playlist.c  warble_playlist.h
osfi-z/stddeflib/: CMakeLists.txt  SOURCES  output.h  printf.c  stdio_fatfs.c  stdio_fatfs.h
schemes/zishan-z1-original/: zishan-z1-original.pro  zishan-z1-original.sch
schemes/zishan-z2-original/: I2C_DAC_initial.logicdata
utils/: logreader.py
(+16 files in other folders)
